[package]
name = "otp"
version = "0.1.1"
authors = ["Tim Dumol <tim@timdumol.com>", "Andrii Dmytrenko <andrii@dmytrenko.uk>"]
description = "A Rust library for performing the HMAC-based One-Time Password (HOTP) and Time-based One-Time Password (TOTP) algorithms."
homepage = "https://github.com/Antti/rust-otp"
repository = "https://github.com/Antti/rust-otp"
readme = "README.md"
keywords = ["otp", "totp", "hotp"]
license = "MIT"

[lib]
name = "otp"

[dependencies]
openssl = "0.9"
base32 = "0.3"
time = "0.1"
byteorder = "1.1"
